render small light around dude at night

--- a/TODO.txt
+++ b/TODO.txt
@@ -109,6 +109,7 @@ X make dude show up where he entered car unless the car moved
 X zombie audio
 X headlight repair
 X add about page
+X add a few pixels of light around the dude at night
 HUD ammo count
 make zombies attracted to light
 make zombies attracted to crashes
@@ -131,7 +132,6 @@ make gas a little more scarce
 make medkits more scarce
 make zombies slighty quicker
 increase number of zombies that come out of houses
-add a few pixels of light around the dude at night
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
