separate countdown and clock

--- a/TODO.txt
+++ b/TODO.txt
@@ -110,6 +110,7 @@ X zombie audio
 X headlight repair
 X add about page
 X add a few pixels of light around the dude at night
+X separate countdown from time
 HUD ammo count
 make zombies attracted to light
 make zombies attracted to crashes
@@ -125,7 +126,6 @@ support maximum of certain kind of sections in the game (police station)
 switch weapons with number keys
 make it so you have to avoid zombies in the start 
 zombies can pop out of cars too
-separate countdown from time
 tweak rate at which zombies are introduced into the game
 make last 20-30 miles full of zombies
 make gas a little more scarce
@@ -226,6 +226,7 @@ cars can be generated overlapping
 can't always hit cars with bat
 Truck inventory/gas hints aren't dismissed when leave truck
 Highlighted car z-index didn't go back to normal after siphoned car dried up
+Time challange intro is rendered too low on the screen
 
 *EDITOR*
 X remove current collidible code
