--- a/TODO.txt
+++ b/TODO.txt
@@ -213,6 +213,7 @@ X on 2nd game after death, old held bat still fires when hit space
 X reload non-time trial game shows "remaining" instead of time
 X 2nd game map tiles not rendered correctly
 X sometimes breaking turns into reverse
+X Time challange intro is rendered too low on the screen
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -226,7 +227,6 @@ cars can be generated overlapping
 can't always hit cars with bat
 Truck inventory/gas hints aren't dismissed when leave truck
 Highlighted car z-index didn't go back to normal after siphoned car dried up
-Time challange intro is rendered too low on the screen
 
 *EDITOR*
 X remove current collidible code
