--- a/TODO.txt
+++ b/TODO.txt
@@ -214,6 +214,7 @@ X reload non-time trial game shows "remaining" instead of time
 X 2nd game map tiles not rendered correctly
 X sometimes breaking turns into reverse
 X Time challange intro is rendered too low on the screen
+X exit car after game reload, placed in center of car
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -227,7 +228,6 @@ cars can be generated overlapping
 can't always hit cars with bat
 Truck inventory/gas hints aren't dismissed when leave truck
 Highlighted car z-index didn't go back to normal after siphoned car dried up
-exit car after game reload, placed in center of car
 
 *EDITOR*
 X remove current collidible code
