--- a/TODO.txt
+++ b/TODO.txt
@@ -215,6 +215,7 @@ X 2nd game map tiles not rendered correctly
 X sometimes breaking turns into reverse
 X Time challange intro is rendered too low on the screen
 X exit car after game reload, placed in center of car
+X house inventory doesn't show up when dude inventory is up, then breaks it
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
