--- a/TODO.txt
+++ b/TODO.txt
@@ -131,6 +131,7 @@ add ability to sleep in houses if no zomibes are chasing you
 make gas can glow
 repair sound
 make last 20-30 miles full of zombies
+wait to show car inventory hint after 5 seconds or so
 
 *BUGS*
 X fix cursor rendering when left click on fuelee inventory item
@@ -217,6 +218,7 @@ X exit car after game reload, placed in center of car
 X house inventory doesn't show up when dude inventory is up, then breaks it
 X Highlighted car z-index didn't go back to normal after siphoned car dried up
 X engine noise should stop when car runs out of fuel
+X brakes still sometimes shoot car backwards
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -232,7 +234,7 @@ Tips go to 100% opacity before fading away even if they were configured for lowe
 Sometimes when screen jumps a few tiles get stuck
 dude moves faster going diagonal
 repeating map at end? looks like MapWorker bought it
-brakes still sometimes shoot car backwards
+random zombies shouldn't be added to start section
 
 *EDITOR*
 X remove current collidible code
