--- a/TODO.txt
+++ b/TODO.txt
@@ -219,6 +219,7 @@ X house inventory doesn't show up when dude inventory is up, then breaks it
 X Highlighted car z-index didn't go back to normal after siphoned car dried up
 X engine noise should stop when car runs out of fuel
 X brakes still sometimes shoot car backwards
+X random zombies shouldn't be added to start section
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -234,7 +235,6 @@ Tips go to 100% opacity before fading away even if they were configured for lowe
 Sometimes when screen jumps a few tiles get stuck
 dude moves faster going diagonal
 repeating map at end? looks like MapWorker bought it
-random zombies shouldn't be added to start section
 
 *EDITOR*
 X remove current collidible code
