--- a/TODO.txt
+++ b/TODO.txt
@@ -237,6 +237,8 @@ Sometimes when screen jumps a few tiles get stuck
 dude moves faster going diagonal
 sometimes resume appears after page reload even though game was over
 barrel sprite sometimes rendered inbetween
+after being invincible and getting into car, still blink when leave car later
+getting pushed dead across the screen then continuing gives stuck tiles
 
 *EDITOR*
 X remove current collidible code
