--- a/TODO.txt
+++ b/TODO.txt
@@ -222,6 +222,7 @@ X engine noise should stop when car runs out of fuel
 X brakes still sometimes shoot car backwards
 X random zombies shouldn't be added to start section
 X sometimes resume appears after page reload even though game was over
+X barrel sprite sometimes rendered inbetween
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -236,7 +237,6 @@ Truck inventory/gas hints aren't dismissed when leave truck
 Tips go to 100% opacity before fading away even if they were configured for lower
 Sometimes when screen jumps a few tiles get stuck
 dude moves faster going diagonal
-barrel sprite sometimes rendered inbetween
 after being invincible and getting into car, still blink when leave car later
 getting pushed dead across the screen then continuing gives stuck tiles
 
