--- a/TODO.txt
+++ b/TODO.txt
@@ -223,6 +223,7 @@ X brakes still sometimes shoot car backwards
 X random zombies shouldn't be added to start section
 X sometimes resume appears after page reload even though game was over
 X barrel sprite sometimes rendered inbetween
+X for car stats stationary cars it hits are considered "runaway"
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
