--- a/TODO.txt
+++ b/TODO.txt
@@ -240,6 +240,7 @@ Sometimes when screen jumps a few tiles get stuck
 dude moves faster going diagonal
 after being invincible and getting into car, still blink when leave car later
 getting pushed dead across the screen then continuing gives stuck tiles
+weird stuck movement keys for dude in Safari
 
 *EDITOR*
 X remove current collidible code
