--- a/TODO.txt
+++ b/TODO.txt
@@ -241,9 +241,13 @@ dude moves faster going diagonal
 after being invincible and getting into car, still blink when leave car later
 getting pushed dead across the screen then continuing gives stuck tiles
 weird stuck movement keys for dude in Safari
-Firefox tile border artifacts
+FF tile border artifacts
 A faster zombie behind a slower one can boost them both faster
 no timeout for baseball bat attacks
+sometimes dropping ammo on weapon or combining ammo adds their counts as strings
+trying to move items between two cars sticks an item to the page if not dropped correctly
+FF car sometimes stops reponding in the middle of the turn
+sometimes on reload the world doesn't come back property - "brown screen"
 
 *EDITOR*
 X remove current collidible code
