--- a/TODO.txt
+++ b/TODO.txt
@@ -224,6 +224,8 @@ X random zombies shouldn't be added to start section
 X sometimes resume appears after page reload even though game was over
 X barrel sprite sometimes rendered inbetween
 X for car stats stationary cars it hits are considered "runaway"
+X sometimes dropping ammo on weapon or combining ammo adds their counts as strings
+X sometimes on reload the world doesn't come back property - "brown screen"
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -244,10 +246,8 @@ weird stuck movement keys for dude in Safari
 FF tile border artifacts
 A faster zombie behind a slower one can boost them both faster
 no timeout for baseball bat attacks
-sometimes dropping ammo on weapon or combining ammo adds their counts as strings
 trying to move items between two cars sticks an item to the page if not dropped correctly
 FF car sometimes stops reponding in the middle of the turn
-sometimes on reload the world doesn't come back property - "brown screen"
 
 *EDITOR*
 X remove current collidible code
