--- a/TODO.txt
+++ b/TODO.txt
@@ -226,6 +226,7 @@ X barrel sprite sometimes rendered inbetween
 X for car stats stationary cars it hits are considered "runaway"
 X sometimes dropping ammo on weapon or combining ammo adds their counts as strings
 X sometimes on reload the world doesn't come back property - "brown screen"
+X open inventory is still open for new games
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
