--- a/TODO.txt
+++ b/TODO.txt
@@ -227,6 +227,7 @@ X for car stats stationary cars it hits are considered "runaway"
 X sometimes dropping ammo on weapon or combining ammo adds their counts as strings
 X sometimes on reload the world doesn't come back property - "brown screen"
 X open inventory is still open for new games
+X dude moves faster going diagonal
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -240,7 +241,6 @@ can't always hit cars with bat
 Truck inventory/gas hints aren't dismissed when leave truck
 Tips go to 100% opacity before fading away even if they were configured for lower
 Sometimes when screen jumps a few tiles get stuck
-dude moves faster going diagonal
 after being invincible and getting into car, still blink when leave car later
 getting pushed dead across the screen then continuing gives stuck tiles
 weird stuck movement keys for dude in Safari
