--- a/TODO.txt
+++ b/TODO.txt
@@ -228,11 +228,14 @@ X sometimes dropping ammo on weapon or combining ammo adds their counts as strin
 X sometimes on reload the world doesn't come back property - "brown screen"
 X open inventory is still open for new games
 X dude moves faster going diagonal
+X car menu sticks around after creating a new game
+X Sometimes when screen jumps a few tiles get stuck
+X getting pushed dead across the screen then continuing gives stuck tiles
+X FF tile border artifacts
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
 zombies and dude bounce over and over slightly when they walk into some cars
-car menu sticks around after creating a new game
 pressing pause at the moment dude dies you get both game over and pause screen
 getting context menus when trying to right-click on inventory (shotgun)
 when dude enters car when it's dark he leaves a silhouette
@@ -240,11 +243,8 @@ cars can be generated overlapping
 can't always hit cars with bat
 Truck inventory/gas hints aren't dismissed when leave truck
 Tips go to 100% opacity before fading away even if they were configured for lower
-Sometimes when screen jumps a few tiles get stuck
 after being invincible and getting into car, still blink when leave car later
-getting pushed dead across the screen then continuing gives stuck tiles
 weird stuck movement keys for dude in Safari
-FF tile border artifacts
 A faster zombie behind a slower one can boost them both faster
 no timeout for baseball bat attacks
 trying to move items between two cars sticks an item to the page if not dropped correctly
@@ -352,11 +352,11 @@ clean up event handlers -- only EventMachine-ified object should fire events (i.
 X Add GOOG Analytics to Dogwatch site
 X Add hint for time trial describing nuke
 X Setup cache buster
+X Create game page
+X Add GOOG Analytics to game page
+X Create Dogwatch Twitter
 Add logo to loading screen
 Add logo to about screen
-Create game page
-Add GOOG Analytics to game page
-Create Dogwatch Twitter
 
 Audio:
 X Make driving at speed sound less headache inducing and shorter
