--- a/TODO.txt
+++ b/TODO.txt
@@ -232,6 +232,7 @@ X car menu sticks around after creating a new game
 X Sometimes when screen jumps a few tiles get stuck
 X getting pushed dead across the screen then continuing gives stuck tiles
 X FF tile border artifacts
+X no timeout for baseball bat attacks
 can't hold drag an item then drop it into another car/building
 arm doesn't flash when dude is hit
 occasionally the farmhouse allows zombies and dude to vworp through from the left or bottom sides
@@ -246,7 +247,6 @@ Tips go to 100% opacity before fading away even if they were configured for lowe
 after being invincible and getting into car, still blink when leave car later
 weird stuck movement keys for dude in Safari
 A faster zombie behind a slower one can boost them both faster
-no timeout for baseball bat attacks
 trying to move items between two cars sticks an item to the page if not dropped correctly
 FF car sometimes stops reponding in the middle of the turn
 
